# HK32F030MXX_CMAKE_PRO

./: CMakeLists.txt  HK32F030MF4P6_FLASH.ld  README.MD  hk32-toolchain.cmake
Inc/: gpio.h  hk32f030m_conf.h  hk32f030m_it.h  main.h  usart.h
Src/: gpio.c  hk32f030m_it.c  main.c  usart.cc
